--- a/Front - Proyecto/src/Biologo/Biologo - Inicio.html
+++ b/Front - Proyecto/src/Biologo/Biologo - Inicio.html
@@ -364,5 +364,6 @@
         </div>                             <!--xl:min-w-[54rem] para pantalla normal    lg:min-w-[20rem] lg:max-w-xl xl:min-w-[54rem] xl:max-w-[60rem] 2xl:min-w-[58rem]--> <!--lg:w-[25rem] xl:min-w-[42rem] 2xl:w-[60rem] md:w-[28rem]-->
     </div>
     <script src="index.js"></script>
+    <script src="/src/index.js"></script>
 </body>
 </html>
