--- a/Front - Proyecto/src/Biologo/PublicacionesEditadas.html
+++ b/Front - Proyecto/src/Biologo/PublicacionesEditadas.html
@@ -198,7 +198,7 @@
                 <div class="flex justify-center mt-5 mb-5">
                     <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/image-7.png?raw=true" class="xl:max-h-[370px] xl:max-w-[490px] lg:max-h-[370px] lg:max-w-[300px] md:max-h-[350px] md:max-w-[420px] max-h-[220px] max-w-[280px] md:min-h-[72] md:min-w-[72] rounded-lg">
                 </div>
-                <div class="flex justify-around">
+                <div class="flex justify-around relative">
                     <div class="flex">
                         <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/favorite.png?raw=true" class="md:h-6 md:w-6 md:ml-8 xl:h-6 xl:w-6 xl:ml-8 h-5 lg:ml-0">
                         <span class="textito font-bold text-[#241111]ml-2 xl:text-sm md:text-[14px] xl:text-[14px] lg:text-[10px] text-[10px] md:mt-[2px] lg:mt-[4px] mt-[4px]">35</span>
@@ -207,7 +207,18 @@
                         <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/chat-alt-2.png?raw=true" class="md:h-6 md:w-6 h-5 md:ml-8 lg:ml-6 ml-6">
                         <span class="textito font-bold text-[#241111] ml-2 xl:text-sm md:text-[14px] lg:text-[10px] text-[10px] md:mt-[2px] lg:mt-[4px] mt-[4px]">11</span>
                     </div>
-                    <span class="textito font-bold text-[#241111] md:ml-8 ml-9 xl:text-sm md:text-[14px] lg:text-[10px] text-[10px] mt-[2px]">Nombre Científico: Nasua</span>
+                    <span class="textito font-bold text-[#241111] md:ml-8 ml-9 xl:text-sm md:text-[14px] lg:text-[10px] text-[10px] mt-[2px]">Nombre Científico: <span id="comentarioTexto">Nasua</span></span>
+                    <input type="text" id="comentarioInput" class="hidden h-6 w-80 mt-3 ml-2"/>
+                    <div id="contenedorEdicion" class="flex hidden absolute mt-10">
+                        <button id="guardar" class="guardar relative" onclick="guardarCambios()">
+                            <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Shi_Color.png?raw=true" alt="Enviar" class="w-12 h-12">
+                            <span class="cambioG hidden absolute bg-white border rounded right-3 w-[8rem] p-1 text-sm">Guardar cambios</span>
+                        </button>
+                        <button id="cancelar" class="cancelar relative ml-4" onclick="cancelarEdicion()" onmouseover="hoverCambios()">
+                            <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/%C3%91o_Color.png?raw=true" alt="Cancelar" class="w-12 h-12">
+                            <span class="cambioC hidden absolute bg-white border rounded p-1 text-sm">Cancelar</span>
+                        </button>
+                    </div>
                     <span class="textito font-bold text-[#241111] ml-8 lg:text-[10px] xl:text-sm md:text-[14px] text-[10px] mt-[2px] lg:mr-0 xl:mr-10 mr-10">Animal: Gato solo</span>
                     
                     <div class="relative inline-block">
@@ -215,7 +226,7 @@
                             <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/edit%20pub.png?raw=true">
                         </button>
                         <div class="absolute -mt-3 -ml-44">
-                            <button class="opciones invisible block w-[13rem]">
+                            <button onclick="editarComentario()" class="opciones invisible block w-[13rem]">
                                 <a class="flex bg-white px-2 py-1 text-sm border border-black text-left hover:bg-gray-200">
                                     <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Edit.png?raw=true" alt="" class="h-4 w-4 ml-2 mr-2">
                                     <p>Editar Nombre Científico</p>
