--- a/Front - Proyecto/src/Administrativo/CRUD'S/Biologo.html
+++ b/Front - Proyecto/src/Administrativo/CRUD'S/Biologo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Administrar Estudiantes</title>
+    <title>Administrar-Biologo</title>
     <link rel="stylesheet" href="output.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
@@ -104,7 +104,7 @@
                 <div class="">
                     <button onclick="añadirRegistro()" class="hover:bg-[#7EBBAA] bg-[#276B58] text-white rounded px-2 py-0.5 md:px-4 items-center flex">
                         <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/crear.png?raw=true" class="w-5 m-1">
-                        <p class="hidden md:block">Añadir Estudiante</p>
+                        <p class="hidden md:block">Añadir Biologo</p>
                         <p class="block md:hidden text-sm">Añadir</p>
                     </button>
                 </div>
@@ -128,13 +128,13 @@
                         </div>
                     </a>
                     <a href="Estudiante.html" class="">
-                        <div class="p-2 bg-[#7EBBAA] flex items-center rounded-md">
+                        <div class="p-2 hover:bg-[#7EBBAA] flex items-center rounded-md">
                             <img class="w-4 ml-1" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/estudiantes_cruds.png?raw=true" alt="icono-estudiante">
                             <p class="ml-5">Estudiantes</p>
                         </div>
                     </a>
                     <a href="Biologo.html" class="">
-                        <div class="p-2 hover:bg-[#7EBBAA] flex items-center rounded-md">
+                        <div class="p-2 bg-[#7EBBAA] flex items-center rounded-md">
                             <img class="w-6" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/biologo_cruds.png?raw=true" alt="icono-estudiante">
                             <p class="ml-4">Biologos</p>
                         </div>
@@ -180,7 +180,7 @@
             <div class="lg:block hidden"> <!--Contendor de filtro y botones de acciones-->
                 <div class="flex pl-7 xl:pl-5 lg:pl-5 w-full mt-[7rem] justify-around items-center">
                     <h2 class="font-roboto text-[#302f2f] text-lg xl:text-[1.7rem] lg:text-[1.6rem]">
-                        Estudiantes
+                        Biologo
                     </h2>
                     <div class="flex items-center" id="busqueda">
                         <img id="lupota" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/lupa%20blanca.png?raw=true" class="absolute xl:ml-[32rem] lg:ml-[18rem] md:ml-[22rem] lg:block md:block xl:block ml-[10rem] hidden h-5">
@@ -190,7 +190,7 @@
                     <div class="ml-10 mr-10">
                         <button onclick="añadirRegistro()" class="hover:bg-[#7EBBAA] bg-[#276B58] text-white rounded px-2 py-2 md:px-4 lg:px-4 xl:px-4 2xl:px-5 items-center flex">
                             <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/crear.png?raw=true" class="w-5 m-1 mr-2">
-                            <p class="">Añadir Estudiante</p>
+                            <p class="">Añadir Biologo</p>
                         </button>
                     </div>
                 </div>
@@ -203,9 +203,9 @@
                         <tr class="h-12">
                             <!-- Encabezados de la tabla -->
                             <th class="text-center px-8 py-2 whitespace-nowrap text-gray-700">Foto de perfil</th>
-                            <th class="text-center px-8 py-2 whitespace-nowrap text-gray-700">Código de usuario</th>
-                            <th class="text-center px-8 py-2 whitespace-nowrap text-gray-700">Nombre de usuario</th>
-                            <th class="text-center px-8 py-2 whitespace-nowrap text-gray-700">Correo de usuario</th>
+                            <th class="text-center px-8 py-2 whitespace-nowrap text-gray-700">Código de Biologo</th>
+                            <th class="text-center px-8 py-2 whitespace-nowrap text-gray-700">Nombre de Biologo</th>
+                            <th class="text-center px-8 py-2 whitespace-nowrap text-gray-700">Correo de Biologo</th>
                             <th class="text-center px-8 py-2 whitespace-nowrap text-gray-700"></th>
                         </tr>
                     </thead>
@@ -215,8 +215,8 @@
                                 <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/%C3%B1eque.png?raw=true" class="w-14 rounded-md justify-center mx-auto">
                             </td>
                             <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">1234</td>
-                            <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">NombreUsuario</td>
-                            <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">CorreoUsuario@utp.ac.pa</td>
+                            <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">NombreBiologo</td>
+                            <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">CorreoBiologo@utp.ac.pa</td>
                             <td class="xl:px-8 lg:px-4">
                                 <div class="botoncitos flex items-center">
                                     <button onclick="hacerEditable('00001')">
@@ -233,8 +233,8 @@
                                 <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/%C3%B1eque.png?raw=true" class="w-14 rounded-md justify-center mx-auto">
                             </td>
                             <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">1234</td>
-                            <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">NombreUsuario</td>
-                            <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">CorreoUsuario@utp.ac.pa</td>
+                            <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">NombreBiologo</td>
+                            <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">CorreoBiologo@utp.ac.pa</td>
                             <td class="xl:px-8 lg:px-4">
                                 <div class="botoncitos flex items-center">
                                     <button onclick="hacerEditable('00002')">
@@ -251,8 +251,8 @@
                                 <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/%C3%B1eque.png?raw=true" class="w-14 rounded-sm justify-center mx-auto">
                             </td>
                             <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">1234</td>
-                            <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">NombreUsuario</td>
-                            <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">CorreoUsuario@utp.ac.pa</td>
+                            <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">NombreBiologo</td>
+                            <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">CorreoBiologo@utp.ac.pa</td>
                             <td class="xl:px-8 lg:px-4">
                                 <div class="flex items-center">
                                     <button onclick="hacerEditable('00003')">
@@ -269,8 +269,8 @@
                                 <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/%C3%B1eque.png?raw=true" class="w-14 rounded-md justify-center mx-auto">
                             </td>
                             <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">1234</td>
-                            <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">NombreUsuario</td>
-                            <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">CorreoUsuario@utp.ac.pa</td>
+                            <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">NombreBiologo</td>
+                            <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">CorreoBiologo@utp.ac.pa</td>
                             <td class="xl:px-8 lg:px-4">
                                 <div class="flex items-center">
                                     <button onclick="hacerEditable('00004')">
@@ -287,8 +287,8 @@
                                 <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/%C3%B1eque.png?raw=true" class="w-14 rounded-md justify-center mx-auto">
                             </td>
                             <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">1234</td>
-                            <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">NombreUsuario</td>
-                            <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">CorreoUsuario@utp.ac.pa</td>
+                            <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">NombreBiologo</td>
+                            <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">CorreoBiologo@utp.ac.pa</td>
                             <td class="xl:px-8 lg:px-4">
                                 <div class="flex items-center">
                                     <button onclick="hacerEditable('00005')">
@@ -305,8 +305,8 @@
                                 <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/%C3%B1eque.png?raw=true" class="w-14 rounded-md justify-center mx-auto">
                             </td>
                             <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">1234</td>
-                            <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">NombreUsuario</td>
-                            <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">CorreoUsuario@utp.ac.pa</td>
+                            <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">NombreBiologo</td>
+                            <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">CorreoBiologo@utp.ac.pa</td>
                             <td class="xl:px-8 lg:px-4">
                                 <div class="flex items-center">
                                     <button onclick="hacerEditable('00006')">
@@ -323,8 +323,8 @@
                                 <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/%C3%B1eque.png?raw=true" class="w-14 rounded-sm justify-center mx-auto">
                             </td>
                             <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">1234</td>
-                            <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">NombreUsuario</td>
-                            <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">CorreoUsuario@utp.ac.pa</td>
+                            <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">NombreBiologo</td>
+                            <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">CorreoBiologo@utp.ac.pa</td>
                             <td class="xl:px-8 lg:px-4">
                                 <div class="flex items-center">
                                     <button onclick="hacerEditable('00007')">
@@ -341,8 +341,8 @@
                                 <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/%C3%B1eque.png?raw=true" class="w-14 rounded-md justify-center mx-auto">
                             </td>
                             <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">1234</td>
-                            <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">NombreUsuario</td>
-                            <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">CorreoUsuario@utp.ac.pa</td>
+                            <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">NombreBiologo</td>
+                            <td class="text-center xl:px-8 lg:px-4 py-2 whitespace-nowrap text-gray-700">CorreoBiologo@utp.ac.pa</td>
                             <td class="xl:px-8 lg:px-4">
                                 <div class="flex items-center">
                                     <button onclick="hacerEditable('00008')">
@@ -376,7 +376,7 @@
             <p class="mt-3">Todos los derechos reservados</p>
         </div>
     </footer>
-    <script src="Estudiante.js"></script>
+    <script src="Biologo.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@2.8.2/dist/alpine.min.js" defer></script>
 </body>
 </html>
