--- a/Front - Proyecto/src/Administrativo/CRUD'S/Biologo.html
+++ b/Front - Proyecto/src/Administrativo/CRUD'S/Biologo.html
@@ -101,13 +101,6 @@
                     <img id="lupota" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/lupa%20blanca.png?raw=true" class="absolute md:ml-[22rem] block ml-[10rem] h-5">
                     <input type="search" class="bg-[#7EBBAA] h-8 rounded-[30px] md:w-[22rem] w-[10rem] ml-8 block border-none object-cover text-white p-3 hover:bg-[#7ebbaacc] focus:outline-none placeholder:text-white" placeholder="Buscar">
                 </div>
-                <div class="">
-                    <button onclick="añadirRegistro()" class="hover:bg-[#7EBBAA] bg-[#276B58] text-white rounded px-2 py-0.5 md:px-4 items-center flex">
-                        <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/crear.png?raw=true" class="w-5 m-1">
-                        <p class="hidden md:block">Añadir Biologo</p>
-                        <p class="block md:hidden text-sm">Añadir</p>
-                    </button>
-                </div>
             </div>
         </div>
     </header>
@@ -127,46 +120,40 @@
                             <p class="ml-4">Inicio</p>
                         </div>
                     </a>
-                    <a href="Estudiante.html" class="">
+                    <a href="/Front - Proyecto/src/Administrativo/CRUD'S/Estudiante.html" class="">
                         <div class="p-2 hover:bg-[#7EBBAA] flex items-center rounded-md">
                             <img class="w-4 ml-1" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/estudiantes_cruds.png?raw=true" alt="icono-estudiante">
                             <p class="ml-5">Estudiantes</p>
                         </div>
                     </a>
-                    <a href="Biologo.html" class="">
+                    <a href="/Front - Proyecto/src/Administrativo/CRUD'S/Biologo.html" class="">
                         <div class="p-2 bg-[#7EBBAA] flex items-center rounded-md">
                             <img class="w-6" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/biologo_cruds.png?raw=true" alt="icono-estudiante">
                             <p class="ml-4">Biologos</p>
                         </div>
                     </a>
-                    <a href="Administrativos.html" class="">
+                    <a href="/Front - Proyecto/src/Administrativo/CRUD'S/Administrativos.html" class="">
                         <div class="p-2 hover:bg-[#7EBBAA] flex items-center rounded-md">
                             <img class="w-4 ml-1" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/admin_cruds.png?raw=true" alt="icono-estudiante">
                             <p class="ml-5">Administrativos</p>
                         </div>
                     </a>
-                    <a href="Flora.html" class="">
+                    <a href="/Front - Proyecto/src/Administrativo/CRUD'S/Flora.html" class="">
                         <div class="p-2 hover:bg-[#7EBBAA] flex items-center rounded-md">
                             <img class="w-6" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/flora_cruds.png?raw=true" alt="icono-estudiante">
                             <p class="ml-4">Flora</p>
                         </div>
                     </a>
-                    <a href="Fauna.html" class="">
+                    <a href="/Front - Proyecto/src/Administrativo/CRUD'S/Fauna.html" class="">
                         <div class="p-2 hover:bg-[#7EBBAA] flex items-center rounded-md">
                             <img class="w-7" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/fauna_cruds.png?raw=true" alt="icono-estudiante">
                             <p class="ml-3">Fauna</p>
                         </div>
                     </a>
-                    <a href="Publicaciones.html" class="">
+                    <a href="/Front - Proyecto/src/Administrativo/CRUD'S/Publicaciones.html" class="">
                         <div class="p-2 hover:bg-[#7EBBAA] flex items-center rounded-md">
                             <img class="w-5 ml-0.5" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/pub_cruds.png?raw=true" alt="icono-estudiante">
                             <p class="ml-4">Publicaciones</p>
-                        </div>
-                    </a>
-                    <a href="Comentarios.html" class="">
-                        <div class="p-2 hover:bg-[#7EBBAA] flex items-center rounded-md">
-                            <img class="w-6" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/comentarios_cruds.png?raw=true" alt="icono-estudiante">
-                            <p class="ml-4">Comentarios</p>
                         </div>
                     </a>
                 </div>
@@ -182,22 +169,14 @@
                     <h2 class="font-roboto text-[#302f2f] text-lg xl:text-[1.7rem] lg:text-[1.6rem]">
                         Biologo
                     </h2>
-                    <div class="flex items-center" id="busqueda">
-                        <img id="lupota" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/lupa%20blanca.png?raw=true" class="absolute xl:ml-[32rem] lg:ml-[18rem] md:ml-[22rem] lg:block md:block xl:block ml-[10rem] hidden h-5">
-                        <input type="search" class="bg-[#7EBBAA] xl:h-10 lg:h-10 h-8 rounded-[30px] xl:w-[32rem] lg:w-[18rem] md:w-[22rem] w-[10rem] ml-8 hidden lg:block xl:block md:block border-none object-cover text-white p-3 hover:bg-[#7ebbaacc] focus:outline-none placeholder:text-white" placeholder="Buscar">
-                    </div>
-                    
-                    <div class="ml-10 mr-10">
-                        <button onclick="añadirRegistro()" class="hover:bg-[#7EBBAA] bg-[#276B58] text-white rounded px-2 py-2 md:px-4 lg:px-4 xl:px-4 2xl:px-5 items-center flex">
-                            <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/crear.png?raw=true" class="w-5 m-1 mr-2">
-                            <p class="">Añadir Biologo</p>
-                        </button>
+                    <div class="flex items-center mx-auto" id="busqueda">
+                        <img id="lupota" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/lupa%20blanca.png?raw=true" class="absolute xl:ml-[32rem] lg:ml-[22rem] md:ml-[22rem] lg:block md:block xl:block ml-[10rem] hidden h-5">
+                        <input type="search" class="bg-[#7EBBAA] xl:h-10 lg:h-10 h-8 rounded-[30px] xl:w-[32rem] lg:w-[22rem] md:w-[22rem] w-[10rem] ml-8 hidden lg:block xl:block md:block border-none object-cover text-white p-3 hover:bg-[#7ebbaacc] focus:outline-none placeholder:text-white" placeholder="Buscar">
                     </div>
                 </div>
-                
             </div>
             <!-- Contenedor de la tabla y sus datos -->
-            <div class="relative top-8 lg:top-0 max-h-[40vh] px-5 min-h-[35rem] sm:min-h-[50rem] md:min-h-[36rem] md:max-h-[40rem] lg:max-h-[32rem] lg:min-h-[30rem] xl:max-h-[34rem] xl:min-h-[30rem] ml-6 bg-[#F0F9FF] mt-8 rounded-md shadow-md overflow-auto mr-10 mb-8 contenedor_datos text-[14px] md:text-[16px] lg:text-[16px] xl:text-[16px] 2xl:text-[18px]">
+            <div class="relative top-8 lg:top-0 max-h-[40vh] px-5 min-h-[35rem] sm:min-h-[38rem] md:min-h-[36rem] md:max-h-[40rem] lg:max-h-[32rem] lg:min-h-[30rem] xl:max-h-[34rem] xl:min-h-[30rem] ml-6 bg-[#F0F9FF] mt-8 rounded-md shadow-md overflow-auto mr-10 mb-8 contenedor_datos text-[14px] md:text-[16px] lg:text-[16px] xl:text-[16px] 2xl:text-[18px]">
                 <table id="añadir_datos" class="w-full border-collapse">
                     <thead>
                         <tr class="h-12">
