--- a/Front - Proyecto/src/Biologo/PerfilBiologo.html
+++ b/Front - Proyecto/src/Biologo/PerfilBiologo.html
@@ -3,18 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perfil de usuario</title>
+    <title>Perfil de Biologo</title>
     <link rel="stylesheet" href="output.css">
 </head>
 <body class="">
     <div class="w-80 h-[28rem] text-lg">
         <div class="ml-6 mr-6">
-            <div class="flex justify-center">
-                <h1 class="text-2xl">Perfil de Biólogo</h1>
-                <button onclick="cerrarPerfil()" class="absolute ml-80 -mt-5">
-                    <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Close_profile.png?raw=true" alt="cerrar" class="h-10 w-10">
-                </button>
-            </div>
+            <button onclick="cerrarPerfil()" class="px-4 py-2 absolute mt right-[25rem] mr-[10rem] top-[6.5rem]">
+                <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Close_profile.png?raw=true" alt="">
+            </button>
+            <h2 class="text-2xl text-center">Perfil de Biologo</h2>
             <div class="flex mt-5 items-center justify-around">
                 <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Charles_Darwin_1.png?raw=true" alt="foto de perfil" class="rounded-full w-16 h-16">
                 <p>Editar foto</p>
