--- a/Front - Proyecto/src/Administrativo/CRUD'S/Biologo.html
+++ b/Front - Proyecto/src/Administrativo/CRUD'S/Biologo.html
@@ -108,8 +108,8 @@
         <aside id="aside" class="min-h-lvh w-64 bg-[#276B58] text-[#FFFFFF] lg:z-[1] z-[8] p-2 hidden lg:block xl:Block lg:relative fixed">
             <div class="absolute mx-auto mt-24 flex flex-col items-center justify-center ">
                 <div class="flex flex-col items-center">
-                    <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/perezoso.png?raw=true" class="w-24 h-24 rounded-full">
-                    <h2 class="mt-2">Nombre Admin</h2>
+                    <img id="imgPerfil" alt="user" class="w-24 h-24 rounded-full">
+                    <h2 id="nombreAdmin" class="mt-2"></h2>
                     <h4>Admin</h4>
                 </div>
         
@@ -213,6 +213,7 @@
         </div>
     </footer>
     <script src="Biologo.js"></script>
+    <script src="/Front - Proyecto/src/Administrativo/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@2.8.2/dist/alpine.min.js" defer></script>
 </body>
 </html>
