--- a/Front - Proyecto/src/Biologo/Solicitud.html
+++ b/Front - Proyecto/src/Biologo/Solicitud.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="output.css">
 </head>
 <body class="">
-    <div class="w-80 h-[28rem] text-lg">
+    <div class="w-80 h-[28rem] text-lg relative">
         <div class="ml-6 mr-6">
-            <button onclick="cerrarVerificacion()" class="px-4 py-2 absolute mt right-[25rem] mr-[10rem] top-[6.5rem]">
+            <button onclick="cerrarVerificacion()" class="px-4 py-2 absolute -top-8 -right-10">
                 <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Close_profile.png?raw=true" alt="">
             </button>
             <h2 class="text-2xl text-center">Solicitud de Verificación</h2>
-        <form enctype="multipart/form-data" method="POST">
+        <form enctype="multipart/form-data">
             <div class="flex mt-5 items-center justify-around">
                 <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Charles_Darwin_1.png?raw=true" alt="foto de perfil" class="rounded-full w-16 h-16">
                 <p>Charles Darwin</p>
