arreglado el botoncito de salir

--- a/Front - Proyecto/src/Biologo/PerfilBiologo.html
+++ b/Front - Proyecto/src/Biologo/PerfilBiologo.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="output.css">
 </head>
 <body class="">
-    <div class="w-80 h-[28rem] text-lg">
+    <div class="w-80 h-[28rem] text-lg relative">
         <div class="ml-6 mr-6">
-            <button onclick="cerrarPerfil()" class="px-4 py-2 absolute mt right-[25rem] mr-[10rem] top-[6.5rem]">
+            <button onclick="cerrarPerfil()" class="px-4 py-2 absolute -top-8 -right-8">
                 <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Close_profile.png?raw=true" alt="">
             </button>
             <h2 class="text-2xl text-center">Perfil de Biologo</h2>
