--- a/Front - Proyecto/src/Biologo/Biologo - Inicio.html
+++ b/Front - Proyecto/src/Biologo/Biologo - Inicio.html
@@ -76,7 +76,7 @@
 
             <button id="mostrarPerfil">
                 <a href="">
-                    <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Charles_Darwin_1.png?raw=true" alt="user icon">
+                    <img id="imgPerfil" alt="user" class="w-12 h-12 ml-2">
                 </a>
             </button>
 
@@ -318,5 +318,6 @@
     <script src="index.js"></script>
         <script src="../index.js"></script>
         <script src="mapeo.js"></script>
+        <script src="perfil.js"></script>
 </body>
 </html>
