--- a/Front - Proyecto/src/Biologo/Biologo - Inicio.html
+++ b/Front - Proyecto/src/Biologo/Biologo - Inicio.html
@@ -59,7 +59,7 @@
         }
         </style>
     </head>
-<body onload="ObtenerPublicaciones()" class="bg-white w-full h-full box-border inicio">
+<body onload="ObtenerBiologo()" class="bg-white w-full h-full box-border inicio">
     <header class="w-full bg-[#276B58] fixed z-[2]">
         <div class="flex items-center justify-between px-4 py-2">
             <div class="flex items-center md:ml-4 ">
