--- a/Front - Proyecto/src/Administrativo/CRUD'S/Biologo.html
+++ b/Front - Proyecto/src/Administrativo/CRUD'S/Biologo.html
@@ -85,17 +85,7 @@
                 <img class="object-cover h-[68px] top-[13.3px] lg:ml-[24px]  xl:ml-[24px] 2xl:ml-[24px] absolute hidden lg:block xl:Block" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/image-3.png?raw=true" />
                 <h1 class="text-[#FFFFFF] text-2xl ml-12 hidden lg:block xl:block">Flora y Fauna UTP</h1> <!--Titulo-->
             </div>
-            <!--
-            <div class="flex items-center" id="busqueda">
-            <img id="lupota" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/image-1.png?raw=true" class="absolute xl:ml-[32rem] lg:ml-[30rem] md:ml-[22rem] lg:block md:block xl:block ml-[10rem] hidden h-5">
-            <img id="lupita" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/lupa%20blanca.png?raw=true" class="block md:hidden lg:hidden xl:hidden h-6 ml-2" alt="">
-            <input type="search" class="bg-[#F0FEF8] xl:h-10 lg:h-10 h-8 rounded-[30px] xl:w-[32rem] lg:w-[30rem] md:w-[22rem] w-[10rem] ml-8 hidden lg:block xl:block md:block border-none object-cover text-slate-500 p-3 hover:bg-[#ffffff] focus:outline-none" placeholder="Buscar">
-            </div>
-            
-            <div class="flex justify-around items-center">
-                <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/administrador.png?raw=true" class="w-[42px] h-[42px] lg:w-[64px] lg:h-[64px]" alt="user icon">
-            </div>
-            -->
+           
             <div class="pl-7 lg:pl-5 w-full flex justify-around items-center lg:hidden"> <!--Contendor de filtro y botones de acciones-->
                 <div class="flex items-center" id="busqueda">
                     <img id="lupota" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/lupa%20blanca.png?raw=true" class="absolute md:ml-[22rem] block ml-[10rem] h-5">
@@ -185,6 +175,7 @@
                             <th class="text-center px-8 py-2 whitespace-nowrap text-gray-700">Código de Biologo</th>
                             <th class="text-center px-8 py-2 whitespace-nowrap text-gray-700">Nombre de Biologo</th>
                             <th class="text-center px-8 py-2 whitespace-nowrap text-gray-700">Correo de Biologo</th>
+                            <th class="text-center px-8 py-2 whitespace-nowrap text-gray-700">Estado</th>
                             <th class="text-center px-8 py-2 whitespace-nowrap text-gray-700"></th>
                         </tr>
                     </thead>
