--- a/Front - Proyecto/src/Biologo/Biologo - Inicio.html
+++ b/Front - Proyecto/src/Biologo/Biologo - Inicio.html
@@ -71,9 +71,8 @@
             </div>
 
             <div class="flex items-center">
-
-            <button onclick="mostrarVerificacion()" id="mostrarVerificacion" class="text-[#FFFFFF] mr-6 text-sm md:text-lg lg:text-lg xl:text-lg hover:text-[#99E0FF] font-semibold">Enviar Solicitud de Verificación</button>
-
+            <div id="estado"></div>
+            
             <button id="mostrarPerfil">
                 <a href="">
                     <img id="imgPerfil" alt="user" class="w-12 h-12 ml-2">
