--- a/Front - Proyecto/src/Biologo/Publicacion.html
+++ b/Front - Proyecto/src/Biologo/Publicacion.html
@@ -71,14 +71,12 @@
             </div>
 
             <div class="flex items-center">
-
-            <button onclick="mostrarVerificacion()" id="mostrarVerificacion" class="text-[#FFFFFF] mr-6 text-sm md:text-lg lg:text-lg xl:text-lg hover:text-[#99E0FF] font-semibold">Enviar Solicitud de Verificación</button>
-
-            <button id="mostrarPerfil">
-                <a href="">
-                    <img id="imgPerfil" alt="user" class="w-12 h-12 ml-2">
-                </a>
-            </button>
+                <div id="estado"></div>
+                <button id="mostrarPerfil">
+                    <a href="">
+                        <img id="imgPerfil" alt="user" class="w-12 h-12 ml-2">
+                    </a>
+                </button>
 
             </div>
         </div>
