--- a/Front - Proyecto/src/Biologo/Solicitud.html
+++ b/Front - Proyecto/src/Biologo/Solicitud.html
@@ -9,7 +9,7 @@
 <body class="">
     <div class="w-80 h-[28rem] text-lg relative">
         <div class="ml-6 mr-6">
-            <button onclick="cerrarVerificacion()" class="px-4 py-2 absolute -top-8 -right-10">
+            <button onclick="cerrarSolicitud()" class="px-4 py-2 absolute -top-8 -right-10">
                 <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Close_profile.png?raw=true" alt="">
             </button>
             <h2 class="text-2xl text-center">Solicitud de Verificación</h2>
