--- a/Front - Proyecto/src/Biologo/Publicacion.html
+++ b/Front - Proyecto/src/Biologo/Publicacion.html
@@ -96,7 +96,7 @@
                 <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/home-white.png?raw=true">
                 <a href="Biologo - Inicio.html" class="ml-2 text-lg font-bold">Inicio</a>
             </div>
-            <div class="mt-4 mb-6 hidden">
+            <div class="mt-4 mb-6">
                 <hr>
                 <div class="flex mt-6">
                     <a onclick="CerrarSesion()" href="/Front - Proyecto/src/Flora y Fauna UTP - inicio.html">Cerrar Sesión</a>
