--- a/Front - Proyecto/src/Biologo/Biologo - Inicio.html
+++ b/Front - Proyecto/src/Biologo/Biologo - Inicio.html
@@ -70,7 +70,14 @@
                 <h1 class="text-[#FFFFFF] text-2xl ml-12 hidden lg:block xl:block">Flora y Fauna UTP</h1> <!--Titulo-->
             </div>
 
+            <div class="flex items-center" id="busqueda"> <!--Barra de busqueda-->
+                <img id="lupota" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/image-1.png?raw=true" class="absolute xl:ml-[32rem] lg:ml-[30rem] md:ml-[22rem] lg:block md:block xl:block ml-[10rem] hidden h-5">
+                <img id="lupita" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/lupa%20blanca.png?raw=true" class="md:hidden lg:hidden xl:hidden h-6 ml-8" alt="">
+                <input type="search" class="bg-[#F0FEF8] xl:h-10 lg:h-10 h-8 rounded-[30px] xl:w-[32rem] lg:w-[30rem] md:w-[22rem] w-[10rem] ml-8 hidden lg:block xl:block md:block border-none object-cover text-slate-500 p-3 hover:bg-[#ffffff] focus:outline-none" placeholder="Buscar">
+                </div>
+
             <div class="flex items-center">
+
             <div id="estado"></div>
 
             <button id="mostrarPerfil">
@@ -109,6 +116,7 @@
                 <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/home-white.png?raw=true">
                 <a href="Biologo - Inicio.html" class="ml-2 text-lg font-bold">Inicio</a>
             </div>
+            
             <div class="grid rounded-[10px] p-1">
                 <h3 class="font-bold">Categorias</h3>
                 <ul class="ml-2">
