--- a/Front - Proyecto/src/Biologo/Biologo - Inicio.html
+++ b/Front - Proyecto/src/Biologo/Biologo - Inicio.html
@@ -49,12 +49,16 @@
             #pub{
                 width: 52%;
             }
+            #tit{
+                font-size: 1.5rem;
+            }
         }
     
         @media only screen and (min-width: 1495.20px) and (max-width: 1536px){
             #pub{
                 width: 59%;
                 margin-left: 5rem;
+                
             }
         }
         </style>
@@ -67,7 +71,7 @@
                 <img class="left-5 object-cover h-[68px] top-[14px] absolute hidden lg:block xl:block" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/image-4.png?raw=true" />
                 <img class="h-[60px] mb-[10px] ml-[2px] object-cover hidden lg:block xl:block" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/logo_utp.png?raw=true" />
                 <img class="object-cover h-[68px] top-[13.3px] lg:ml-[24px]  xl:ml-[24px] 2xl:ml-[24px] absolute hidden lg:block xl:Block" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/image-3.png?raw=true" />
-                <h1 class="text-[#FFFFFF] text-2xl ml-12 hidden lg:block xl:block">Flora y Fauna UTP</h1> <!--Titulo-->
+                <h1 id="tit" class="text-[#FFFFFF] ml-12 hidden lg:block xl:block">Flora y Fauna UTP</h1> <!--Titulo-->
             </div>
 
             <div class="flex items-center" id="busqueda"> <!--Barra de busqueda-->
